online game section done with responive

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -12,6 +12,13 @@
   margin: 30px auto;
 }
 
+.banner-title {
+  color: #0b0223;
+  font-size: 48px;
+  font-weight: 600;
+  text-transform: uppercase;
+}
+
 /* header related styles */
 .title {
   color: #0b0223;
@@ -77,12 +84,6 @@ a {
 }
 
 /* Banner styles */
-.banner-title {
-  color: #0b0223;
-  font-size: 48px;
-  font-weight: 600;
-  text-transform: uppercase;
-}
 
 .banner-title-goat span {
   font-size: 95px;
@@ -127,8 +128,51 @@ a {
   color: #ffffff;
 }
 
-.banner-container{
+.banner-container {
   display: flex;
   justify-content: space-between;
   align-items: center;
+}
+
+/* Main part styles */
+.main-part {
+  margin: 100px 0;
+}
+
+/* online-games section */
+.online-games-title {
+  text-align: center;
+  font-weight: 700;
+}
+
+.online-games-title span {
+  color: #fa42a5;
+}
+
+.online-games-para {
+  margin: 30px 0;
+  color: #534c64;
+  text-align: center;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 30px; /* 166.667% */
+}
+
+.card-para {
+  text-align: start;
+  font-size: 15px;
+}
+
+.hover-img {
+  width: 50px;
+}
+
+.online-games-container{
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+}
+
+.hover-card-img{
+  width: 250px;
+  gap: 20px;
 }
