--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -31,6 +31,22 @@
   }
 
   
+  .online-games-container{
+    grid-template-columns: 1fr;
+    text-align: center;
+  }
+
+  .card-para {
+    text-align: center;
+    font-size: 15px;
+  }
+
+  .hover-card-img{
+    width: 90%;
+    gap: 20px;
+  }
+
+
 }
 
 /* Medium devices */
@@ -54,6 +70,11 @@
   .banner-container{
     flex-direction: column;
     gap: 25px;
+  }
+
+  .online-games-container{
+    grid-template-columns: repeat(2, 1fr);
+    text-align: center;
   }
 
 }
