--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -22,16 +22,15 @@
     box-shadow: none;
   }
 
-  .banner-container{
+  .banner-container {
     flex-direction: column-reverse;
     gap: 25px;
   }
-  .banner-img-play{
+  .banner-img-play {
     width: 100%;
   }
 
-  
-  .online-games-container{
+  .online-games-container {
     grid-template-columns: 1fr;
     text-align: center;
   }
@@ -41,35 +40,52 @@
     font-size: 15px;
   }
 
-  .hover-card-img{
+  .hover-card-img {
     width: 90%;
     gap: 20px;
   }
 
-  .instantly-play-container{
+  .instantly-play-container {
     flex-direction: column;
     gap: 30px;
     text-align: center;
   }
-  .img-instant-playOne{
+  .img-instant-playOne {
     width: 80%;
     height: auto;
-    
   }
 
-  .img-instant-playTwo{
+  .img-instant-playTwo {
     width: 140px;
     height: auto;
     right: 65%;
   }
 
-  .instant-play-content{
+  .instant-play-content {
     text-align: center;
   }
 
-  .instant-game-title{
+  .instant-game-title {
     font-size: 40px;
   }
+
+  .game-group-one-container {
+    grid-template-columns: repeat(2, 1fr);
+    gap: 20px;
+    width: 90%;
+    margin: 0 auto;
+  }
+
+  .game-group-two-container {
+    grid-template-columns: repeat(2, 1fr);
+    gap: 20px;
+  }
+
+  /* .game-group-one-container, .game-group-two-container{
+    width: 100%;
+    gap: 10px;
+    grid-template-columns: repeat(3, 1fr);
+  } */
 }
 
 /* Medium devices */
@@ -86,27 +102,26 @@
     gap: 36px;
     align-items: center;
   }
-  .nav-section{
+  .nav-section {
     box-shadow: none;
   }
 
-  .banner-container{
+  .banner-container {
     flex-direction: column;
     gap: 25px;
   }
 
-  .online-games-container{
+  .online-games-container {
     grid-template-columns: repeat(2, 1fr);
     text-align: center;
   }
 
-
-  .instantly-play-container{
+  .instantly-play-container {
     flex-direction: column;
     text-align: center;
   }
 
-  .instant-play-content{
+  .instant-play-content {
     text-align: center;
   }
 }
