--- a/styles/styles.css
+++ b/styles/styles.css
@@ -24,7 +24,7 @@
 }
 
 .section {
-  margin: 120px 0;
+  margin: 180px 0;
 }
 
 /* header related styles */
@@ -227,7 +227,8 @@ a {
 .gamer {
   display: flex;
   align-items: center;
-  gap: 15px;
+  justify-content: center;
+  gap: 5px;
   border: none;
   border-radius: 50px;
   background: #fff;
@@ -236,42 +237,26 @@ a {
   font-weight: 600;
 }
 
-.game-one {
-  grid-area: one;
-}
-
-.game-two {
-  grid-area: two;
-}
-
-.game-three {
-  grid-area: three;
-}
-
-.game-five {
-  grid-area: five;
-}
-
-.game-six {
-  grid-area: six;
-}
-
-.game-seven {
-  grid-area: seven;
-}
-
-.game-eight {
-  grid-area: eight;
-}
-
-.game-nine {
-  grid-area: nine;
-}
-
 .various-game-container {
+  width: 100%;
   display: grid;
-  grid-template-areas: 
-  "one two three four five"
-  "six seven eight nine"
-  ;
+  grid-template-columns:  1fr;
+  gap: 10px;
+}
+
+
+
+.game-group-one-container{
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+}
+
+
+.game-group-two-container{
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 5px;
+  width: 90%;
+  margin: 0 auto;
+  
 }
