--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -30,6 +30,10 @@
     width: 100%;
   }
 
+  .banner-img{
+    width: 100%;
+  }
+
   .online-games-container {
     grid-template-columns: 1fr;
     text-align: center;
@@ -137,7 +141,7 @@
   }
 
   .footer-container {
-    width: 100%;
+    max-width: 100%;
   }
 
   .footer-li-container {
