--- a/styles/styles.css
+++ b/styles/styles.css
@@ -150,9 +150,7 @@ a {
   gap: 20px;
 }
 
-/* .banner-img {
-  width: 60%;
-} */
+
 
 /* Main part styles */
 .main-part {
@@ -183,6 +181,8 @@ a {
   width: 50px;
 }
 
+
+
 .online-games-container {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
@@ -190,7 +190,52 @@ a {
 
 .hover-card-img {
   width: 250px;
+  height: 295px;
   gap: 20px;
+}
+
+
+
+.card{
+  position: relative;
+  display: inline-block;
+}
+
+.overlay{
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  opacity: 0;
+  transition: opacity 0.3s ease;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.card:hover .overlay{
+  width: 250px;
+  height: 295px;
+  opacity: 1;
+}
+
+.card-hover-icon{
+  width: 40px;
+  color: white;
+}
+
+.watch-later-para{
+  color: #d42a90;
+  font-size: 14px;
+  margin-top: 5px;
+  font-weight: bold;
+}
+
+.card-para{
+  width: 250px;
 }
 
 /* play-instantly section styles */
@@ -279,7 +324,7 @@ a {
 
 /* footer section styles */
 
-footer section {
+footer> section {
   width: 100%;
   background: #0b0223;
 }
