--- a/styles/styles.css
+++ b/styles/styles.css
@@ -186,57 +186,15 @@ a {
 .online-games-container {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
+  gap: 20px;
 }
 
 .hover-card-img {
   width: 250px;
-  height: 295px;
   gap: 20px;
 }
 
 
-
-.card{
-  position: relative;
-  display: inline-block;
-}
-
-.overlay{
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.5);
-  opacity: 0;
-  transition: opacity 0.3s ease;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-
-.card:hover .overlay{
-  width: 250px;
-  height: 295px;
-  opacity: 1;
-}
-
-.card-hover-icon{
-  width: 40px;
-  color: white;
-}
-
-.watch-later-para{
-  color: #d42a90;
-  font-size: 14px;
-  margin-top: 5px;
-  font-weight: bold;
-}
-
-.card-para{
-  width: 250px;
-}
 
 /* play-instantly section styles */
 
@@ -372,6 +330,12 @@ footer button {
   margin-top: 50px;
 }
 
+footer button{
+  border-radius: 50%;
+  margin-right: 10px;
+  margin-bottom: 50px;
+}
+
 .nav-img {
-  width: 30px;
+  width: 50px;
 }
