--- a/styles/styles.css
+++ b/styles/styles.css
@@ -280,6 +280,7 @@ a {
 /* various game section */
 
 .gamer {
+  /* width: 200px; */
   display: flex;
   align-items: center;
   justify-content: center;
@@ -319,6 +320,8 @@ a {
   width: 90%;
   margin: 0 auto;
 }
+
+
 
 /* footer section styles */
 
